--- a/src/pages/Products/products.css
+++ b/src/pages/Products/products.css
@@ -74,24 +74,19 @@
   color: var(--whiteColor);
   opacity: 0.7;
   font-size: 13px;
+  text-align: justify;
 }
 .products .secContainer .mainContainer .singleContainer .containerFooter {
   padding: 0.8rem;
   background-color: whitesmoke;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .products .secContainer .mainContainer .singleContainer .containerFooter .containerText h3 {
   color: var(--textColor);
-  font-size: 24px !important;
+  font-size: 22px !important;
 }
 .products .secContainer .mainContainer .singleContainer .containerFooter .containerText p {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: 18px !important;
-  color: rgb(96, 159, 96);
+  color: #6495ED;
   font-family: "Poppins", sans-serif !important;
 }
 .products .secContainer .mainContainer .singleContainer:hover .overlayInfo {
