--- a/src/pages/Products/products.scss
+++ b/src/pages/Products/products.scss
@@ -82,6 +82,7 @@
                             color: var(--whiteColor);
                             opacity: .7;
                             font-size: 13px;
+                            text-align: justify;
                         }
                     }
                 }
@@ -89,21 +90,15 @@
                 .containerFooter{
                     padding: .8rem;
                     background-color: whitesmoke;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
 
                     .containerText{
                         h3{
                             color: var(--textColor);
-                            font-size: 24px !important;
+                            font-size: 22px !important;
                         }
                         p{
-                            display: flex;
-                            align-items: center;
-                            justify-content: center;
                             font-size: 18px !important;
-                            color: rgb(96, 159, 96);
+                            color: #6495ED;
                             font-family: 'Poppins', sans-serif !important;
                         }
                     }
